discourse-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: web-server
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: web-server
    spec:
      containers:
      - name: web-server
        image: local_discourse/app
        command: [ "/bin/bash", "-ce", "tail -f /dev/null" ]
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 500m
            memory: 1Gi
          limits:
            cpu: 1
            memory: 2Gi
        imagePullPolicy: Never
        volumeMounts:
        - name: discourse-local-pv
          mountPath: /mnt/disks/vol2
      volumes:
      - name: discourse-local-pv
        persistentVolumeClaim:
          claimName: discourse-local-pvc
