pgsql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: pgsql
  labels:
    app: pgsql-server
spec:
  ports:
    - port: 5432
  selector:
    app: pgsql-server
  clusterIP: None
